# neva-mobile

./: .gitignore  .mcp.json  README.md  RELEASE_NOTES.md  WINDOWS7-LEGACY.md
.github/workflows/: release.yml
app/: README.md  index.html  package-lock.json  package.json  release.cjs  vite.config.ts
app/src/: App.tsx  index.css  main.tsx  types.ts
app/src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/migrations/: 001_initial.sql  002_seed.sql  003_device_profile.sql  004_manufacturer_warranty.sql  005_performance_indexes.sql  006_remove_stock_aging.sql  007_remove_ram.sql  008_add_model_text.sql  009_expense_freeform_category.sql  010_cosmetic_grade_relabel.sql  011_contact_phone.sql  012_hotfix.sql  013_pos_commission.sql  014_etiket_numarasi.sql  015_partial_payment.sql  016_imei_optional.sql  017_etiket_exact_match.sql
app/src-tauri/src/: lib.rs  license.rs
app/src-tauri/windows7/: hooks.nsh
app/src/components/: Activation.tsx  CommandPalette.tsx  ExpenseSection.tsx  ImeiCopyDialog.tsx  LicenseRequired.tsx  PeopleTab.tsx  PhoneDrawer.tsx  PhoneQuality.tsx  QuickPurchase.tsx  Splash.tsx  UpdateDialog.tsx  (+1 more)
design-system/phonedealer-erp/: MASTER.md
docs/: 00-README.md  01-analiz-ve-kapsam.md  02-veritabani-mimarisi.md  03-bilgi-mimarisi-ve-navigasyon.md  04-ekran-spesifikasyonlari.md  05-kullanici-senaryolari.md  06-lisans-mimarisi.md  07-vizyon-ve-marka-revizyonu.md  KURALLAR.md
license-manager/: Cargo.toml
license-manager/src/: db.rs  main.rs
(+61 files in other folders)
