[package]
name = "neva-license-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
data-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
strip = true
lto = true
